--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@ant-design/pro-components": "^2.4.4",
     "@dagrejs/dagre": "^1.1.4",
     "@umijs/max": "^4.3.20",
-    "@xyflow/react": "^12.2.1",
+    "@xyflow/react": "^12.3.1",
     "antd": "^5.4.0",
     "d3-hierarchy": "^3.1.2",
+    "react-remark": "^2.1.0",
     "uuid": "^10.0.0",
     "zustand": "5.0.0-rc.2"
   },
