--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@xyflow/react": "^12.3.1",
     "antd": "^5.4.0",
     "d3-hierarchy": "^3.1.2",
+    "nanoid": "^5.0.7",
+    "react-json-view": "^1.21.3",
     "react-remark": "^2.1.0",
     "uuid": "^10.0.0",
     "zustand": "5.0.0-rc.2"
