--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@umijs/max": "^4.3.20",
     "@xyflow/react": "^12.3.1",
     "antd": "^5.4.0",
+    "classnames": "^2.5.1",
     "d3-hierarchy": "^3.1.2",
+    "deepcopy": "^2.1.0",
     "nanoid": "^5.0.7",
     "react-json-view": "^1.21.3",
     "react-remark": "^2.1.0",
