--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@umijs/max": "^4.3.20",
     "@xyflow/react": "^12.3.1",
     "antd": "^5.4.0",
+    "codesandbox": "^2.2.3",
     "d3-hierarchy": "^3.1.2",
     "nanoid": "^5.0.7",
     "react-json-view": "^1.21.3",
