--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@ant-design/icons": "^5.0.1",
     "@ant-design/pro-components": "^2.4.4",
     "@dagrejs/dagre": "^1.1.4",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "@umijs/max": "^4.3.20",
     "@xyflow/react": "^12.3.1",
     "antd": "^5.4.0",
